--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -1,5 +1,6 @@
 :root {
   --p-color-orange: #FF6D00;
+  --p-color-orange-light: #ff8121;
   --p-color-blue: #007BFF;
   --p-color-green: #14A76C;
   --p-color-gray: #616970;
@@ -11,18 +12,23 @@
 .bg-p-orange {
   background-color: var(--p-color-orange);
 }
+
 .bg-p-blue {
   background-color: var(--p-color-blue);
 }
+
 .bg-p-green {
   background-color: var(--p-color-green)
 }
+
 .bg-p-gray {
   background-color: var(--p-color-gray);
 }
+
 .bg-p-yellow {
   background-color: var(--p-color-yellow);
 }
+
 .bg-p-gray-light {
   background-color: var(--p-color-gray-light);
 }
@@ -31,10 +37,12 @@
 .header__logo {
   text-align: center;
 }
+
 .header__logo-img {
   max-width: 250px;
   height: 50px;
 }
+
 /* .header__search {
 
 } */
@@ -45,13 +53,16 @@
   border-radius: .5rem;
   font-size: 1.1rem;
 }
+
 .header__search-input:focus {
   border: solid 2px var(--p-color-orange);
 }
+
 .header__search-input__placeholder-color::placeholder {
   color: #b5b5b5;
   font-weight: 500;
 }
+
 .header__social {
   display: flex;
   justify-content: center;
@@ -66,25 +77,50 @@
 }
 
 /* horizontal-menu */
+.nav {
+  padding: .5rem 0px;
+}
 .nav__menu-li a {
   font-weight: bold;
 }
+
+.nav__menu-icons-div {
+  position: relative;
+}
 .nav__menu-icons-i {
   font-size: 1.4rem;
+}
+.nav__menu-icons-span {
+  position: absolute;
+  border: 1px solid #222;
+  border-radius: 9999px;
+  padding: 0px .4rem;
+  font-size: .8rem;
+  top: -9px;
+  right: -11px;
+  background-color: #222;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.nav__menu-button {
+  background: none;
+  border: none;
 }
 
 /* main */
 .main__product {
   position: relative;
-  font-family: 'Space Mono', monospace;
   margin-bottom: 1.5rem;
 }
+
 .main__product-picture {
   display: block;
   padding: 1rem;
   border: 1px solid var(--p-color-gray-light);
   border-radius: 5px;
 }
+
 .main__product-tag {
   font-size: .8rem;
   font-weight: bold;
@@ -92,36 +128,154 @@
   top: 1rem;
   padding: .1rem .5rem .2rem;
 }
+
 .main__product-tag--new {
   background-color: var(--p-color-green);
   color: #ffffff;
 }
+
 .main__product-picture-img {
   width: 100%;
   height: 250px;
 }
-.main__product-picture-title {
-  padding: 1rem 0px;
+
+.main__product-picture-brand {
+  padding: .5rem 0px 0px 0px;
   font-weight: bold;
-  color:  var(--p-color-gray);
+  color: var(--p-color-gray);
 }
+
+.main__product-picture-title {
+  padding: .2rem 0px;
+  font-weight: bold;
+  font-size: .8rem;
+  color: #222;
+  font-family: 'EB Garamond', serif;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Space Mono', monospace;
+}
+
 .main__product-cart {
   display: flex;
   font-size: 1rem;
-  font-family: 'Times New Roman', Times, serif;
   justify-content: space-between;
+  margin-top: .5rem;
 }
+
+.cart__button-icons-i {
+  font-size: 1.1rem;
+  padding-left: .5rem;
+}
+
 .main__product-picture-price {
-  display: inline-block;
-  padding-bottom: 1rem;
+  display: block;
+  font-size: 1.2rem;
 }
+
+.price-discount {
+  color: #d10404;
+  text-decoration: line-through;
+  font-size: 1rem;
+}
+
 .main__product-cart-button {
-  background-color: var(--p-color-yellow-light);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--p-color-orange-light);
   border: none;
   font-weight: bold;
-  padding: .3rem .6rem;
+  padding: .3rem;
+  width: 100%;
+  border-radius: .5rem;
+  color: #ffffff;
 }
 
 .main__product-cart-button:hover {
-  background-color: var(--p-color-yellow);
+  background-color: var(--p-color-orange);
+}
+
+.popover-header {
+  display: none;
+}
+
+.popover-body {
+  width: 120px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.pop__account {
+  display: block;
+  padding-bottom: .5rem;
+  text-decoration: none;
+}
+
+/* product specific */
+.product {
+  margin: 1rem 0;
+}
+.product__img {
+  width: 420px;
+  max-width: 100%;
+}
+.product__details-brand, .product__details-name {
+  font-family: 'EB Garamond', serif;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Space Mono', monospace;
+}
+
+.product__details-brand {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.product__details-brand-p {
+  margin: 0;
+  font-weight: bold;
+}
+.product__details-brand-span {
+  color: var(--p-color-gray);
+  font-size: .7rem;
+}
+.product__details-name {
+  font-size: 1.2rem;
+  font-weight: normal;
+}
+.product__details-price-discount {
+  margin: 0;
+}
+.product__details-quantity {
+  margin: 1rem 0;
+}
+.product__details-quantity-plus, .product__details-quantity-less, .product__details-quantity-product {
+border: none;
+outline: none;
+text-align: center;
+}
+.product__details-quantity-less, .product__details-quantity-plus {
+background-color: var(--p-color-gray-light);
+padding: .4rem .8rem;
+font-size: 1.1rem;
+font-weight: 800;
+}
+
+.product__details-add {
+  background-color: var(--p-color-orange-light);
+  border: var(--p-color-orange);
+}
+.product__details-add:hover {
+  background-color: var(--p-color-orange);
+}
+
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.form-floating>input:focus {
+  box-shadow: none !important;
 }
